package com.fanstudy.designmode.flyweight;

public abstract class Website {


    public abstract void use(User user);
}
